--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/MyGame_WebGL.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MyGame_WebGL.data.br",
-        frameworkUrl: buildUrl + "/MyGame_WebGL.framework.js.br",
-        codeUrl: buildUrl + "/MyGame_WebGL.wasm.br",
+        dataUrl: buildUrl + "/MyGame_WebGL.data",
+        frameworkUrl: buildUrl + "/MyGame_WebGL.framework.js",
+        codeUrl: buildUrl + "/MyGame_WebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Goto",
         productName: "Roll-a-Ball",
